--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -39,7 +39,7 @@ nav li {
 .main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr;
   grid-template-areas: "firstpart secondpart thirdpart";
 }
 
